--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "web-vitals": "^3.1.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -61,7 +61,6 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.3",
-    "react-app-rewired": "^2.2.1",
     "react-test-renderer": "^18.2.0"
   },
   "proxy": "http://localhost:5000"
