--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "baseUrl": "./src",
     "outDir": "./dist",
     "allowJs": true,
     "skipLibCheck": true,
@@ -24,6 +25,5 @@
     "noUncheckedIndexedAccess": true,
     "types": ["jest", "node"]
   },
-  "include": ["src", "**/*.{ts,tsx}"],
-  "extends": "./tsconfig.path.json"
+  "include": ["src", "**/*.{ts,tsx}"]
 }
