--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,7 @@
     "@typescript-eslint/no-non-null-assertion": "off",
     "consistent-return": "off",
     "no-alert": "off",
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "react/state-in-constructor": "off"
   }
 }
