refactor: Input 컴포넌트에 ts 적용

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
     "consistent-return": "off",
     "no-alert": "off",
     "no-useless-constructor": "off",
-    "react/state-in-constructor": "off"
+    "react/state-in-constructor": "off",
+    "prefer-arrow-callback": "off"
   }
 }
