--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.5",
     "@types/js-cookie": "^3.0.2",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
